Update Linear Regression

--- a/Linear Regression.ipynb
+++ b/Linear Regression.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
    "metadata": {},
    "source": [
     "## 선형성\n",
-    "선형 회귀에서는 오차항들이 서로 독립이어야한다. <code>car</code> 패키지의 <code>crPlots()</code> 함수를 사용해 선형성을 확인할 수 있다."
+    "<code>car</code> 패키지의 <code>crPlots()</code> 함수를 사용해 선형성을 확인할 수 있다."
    ]
   },
   {
@@ -482,88 +482,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<dl class=dl-horizontal>\n",
-       "\t<dt>crim</dt>\n",
-       "\t\t<dd>2.29508406361405</dd>\n",
-       "\t<dt>zn</dt>\n",
-       "\t\t<dd>2.42333122867113</dd>\n",
-       "\t<dt>indus</dt>\n",
-       "\t\t<dd>4.37569036558891</dd>\n",
-       "\t<dt>chas</dt>\n",
-       "\t\t<dd>1.12475830330813</dd>\n",
-       "\t<dt>nox</dt>\n",
-       "\t\t<dd>4.45011648627782</dd>\n",
-       "\t<dt>rm</dt>\n",
-       "\t\t<dd>2.08163441412308</dd>\n",
-       "\t<dt>age</dt>\n",
-       "\t\t<dd>3.40153739513046</dd>\n",
-       "\t<dt>dis</dt>\n",
-       "\t\t<dd>4.24635059920922</dd>\n",
-       "\t<dt>rad</dt>\n",
-       "\t\t<dd>7.16553038124686</dd>\n",
-       "\t<dt>tax</dt>\n",
-       "\t\t<dd>8.46476684954416</dd>\n",
-       "\t<dt>ptratio</dt>\n",
-       "\t\t<dd>1.82388852828748</dd>\n",
-       "\t<dt>b</dt>\n",
-       "\t\t<dd>1.38805908215182</dd>\n",
-       "\t<dt>lstat</dt>\n",
-       "\t\t<dd>3.44050330986818</dd>\n",
-       "</dl>\n"
-      ],
-      "text/latex": [
-       "\\begin{description*}\n",
-       "\\item[crim] 2.29508406361405\n",
-       "\\item[zn] 2.42333122867113\n",
-       "\\item[indus] 4.37569036558891\n",
-       "\\item[chas] 1.12475830330813\n",
-       "\\item[nox] 4.45011648627782\n",
-       "\\item[rm] 2.08163441412308\n",
-       "\\item[age] 3.40153739513046\n",
-       "\\item[dis] 4.24635059920922\n",
-       "\\item[rad] 7.16553038124686\n",
-       "\\item[tax] 8.46476684954416\n",
-       "\\item[ptratio] 1.82388852828748\n",
-       "\\item[b] 1.38805908215182\n",
-       "\\item[lstat] 3.44050330986818\n",
-       "\\end{description*}\n"
-      ],
-      "text/markdown": [
-       "crim\n",
-       ":   2.29508406361405zn\n",
-       ":   2.42333122867113indus\n",
-       ":   4.37569036558891chas\n",
-       ":   1.12475830330813nox\n",
-       ":   4.45011648627782rm\n",
-       ":   2.08163441412308age\n",
-       ":   3.40153739513046dis\n",
-       ":   4.24635059920922rad\n",
-       ":   7.16553038124686tax\n",
-       ":   8.46476684954416ptratio\n",
-       ":   1.82388852828748b\n",
-       ":   1.38805908215182lstat\n",
-       ":   3.44050330986818\n",
-       "\n"
-      ],
-      "text/plain": [
-       "    crim       zn    indus     chas      nox       rm      age      dis \n",
-       "2.295084 2.423331 4.375690 1.124758 4.450116 2.081634 3.401537 4.246351 \n",
-       "     rad      tax  ptratio        b    lstat \n",
-       "7.165530 8.464767 1.823889 1.388059 3.440503 "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    crim       zn    indus     chas      nox       rm      age      dis \n",
+      "2.295084 2.423331 4.375690 1.124758 4.450116 2.081634 3.401537 4.246351 \n",
+      "     rad      tax  ptratio        b    lstat \n",
+      "7.165530 8.464767 1.823889 1.388059 3.440503 \n"
+     ]
     }
    ],
    "source": [
-    "vif(lm.fit)"
+    "print(vif(lm.fit))"
    ]
   },
   {
