Update Regularized Regression Summary

--- a/Regularized Regression.ipynb
+++ b/Regularized Regression.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -89,6 +89,10 @@
     "library(ggplot2)\n",
     "library(dplyr)\n",
     "\n",
+    "# Set plot setting\n",
+    "options(repr.plot.width=7, repr.plot.height=3)\n",
+    "par(mfrow = c(1,2))\n",
+    "\n",
     "# Load data\n",
     "data(Hitters)\n",
     "\n",
@@ -107,16 +111,16 @@
     "grid <- 10^seq(10, -2, length=100)\n",
     "\n",
     "# Search best lambda for ridge\n",
-    "ridge.fit <- cv.glmnet(x[train.id,], y[train.id], alpha = 0, lambda = grid)\n",
-    "options(repr.plot.width=7, repr.plot.height=3)\n",
-    "par(mfrow = c(1,2))\n",
-    "plot(ridge.fit, sub = \"Ridge\")\n",
+    "ridge.fit <- cv.glmnet(x[train.id,], y[train.id], alpha = 0, lambda = grid, nfolds = 10)\n",
     "ridge.lambda <- ridge.fit$lambda.min\n",
     "\n",
     "# Search best lambda for lasso\n",
-    "lasso.fit <- cv.glmnet(x[train.id,], y[train.id], alpha = 1, lambda = grid)\n",
-    "plot(lasso.fit, sub = \"Lasso\")\n",
-    "lasso.lambda <- lasso.fit$lambda.min"
+    "lasso.fit <- cv.glmnet(x[train.id,], y[train.id], alpha = 1, lambda = grid, nfolds = 10)\n",
+    "lasso.lambda <- lasso.fit$lambda.min\n",
+    "\n",
+    "# Plot lambda search\n",
+    "plot(ridge.fit, sub = \"Ridge\")\n",
+    "plot(lasso.fit, sub = \"Lasso\")"
    ]
   },
   {
@@ -128,8 +132,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 442,
-   "metadata": {},
+   "execution_count": 129,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -146,8 +152,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "최적의 $\\lambda$값을 사용해 Ridge와 Lasso의 성능을 검증해보자."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 443,
+   "execution_count": 130,
    "metadata": {
     "scrolled": false
    },
@@ -182,7 +195,7 @@
     "lm.fit <- lm(Salary ~ ., data = Hitters, subset = train.id)\n",
     "\n",
     "# Predict\n",
-    "lm.pred <- predict(lm.fit, newdata = Hitters[-train.id,])\n",
+    "lm.pred    <- predict(lm.fit, newdata = Hitters[-train.id,])\n",
     "ridge.pred <- predict(ridge.fit, s = ridge.lambda, newx = x[-train.id,])\n",
     "lasso.pred <- predict(lasso.fit, s = lasso.lambda, newx = x[-train.id,])\n",
     "\n",
@@ -217,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 673,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -237,6 +250,9 @@
     }
    ],
    "source": [
+    "ridge.coef <- as.matrix(predict(ridge.fit, s = ridge.lambda, newx = x[-train,], type = \"coefficients\"))\n",
+    "lasso.coef <- as.matrix(predict(lasso.fit, s = lasso.lambda, newx = x[-train,], type = \"coefficients\"))\n",
+    "\n",
     "coef.df <- data.frame(variable = names(lm.fit$coefficients), coefficient = c(lm.fit$coefficients), \n",
     "                      method = \"Linear\", stringsAsFactors = F) %>%\n",
     "bind_rows(data.frame(variable = rownames(ridge.coef), coefficient = c(ridge.coef),\n",
@@ -271,22 +287,73 @@
    "source": [
     "# Elastic Net\n",
     "Elastic net은 $L_1 \\text{ } norm$과 $L_2 \\text{ } norm$을 혼합하여 사용하는 방법이다.\n",
-    "$$\\sum_{i=1}^n (y_i - \\beta_0 - \\sum_{j=1}^k \\beta_jx_{ij})^2 + \\lambda(\\alpha\\cdot\\sum_{j=1}^k \\beta_j^2 + (1-\\alpha)\\cdot\\sum_{j=1}^n \\lvert\\beta_j\\rvert) $$"
+    "$$\\sum_{i=1}^n (y_i - \\beta_0 - \\sum_{j=1}^k \\beta_jx_{ij})^2 + \\lambda((1-\\alpha)\\cdot\\sum_{j=1}^k \\beta_j^2 + \\alpha\\cdot\\sum_{j=1}^n \\lvert\\beta_j\\rvert) $$\n",
+    "$\\alpha = 1$이면 Lasso, $\\alpha = 0$이면 Ridge가 된다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {},
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   alpha     rmse    lambda\n",
+      "1   0.00 303.2178 10.722672\n",
+      "2   0.05 304.1674  8.111308\n",
+      "3   0.10 310.6207  2.656088\n",
+      "4   0.15 306.8686  4.641589\n",
+      "5   0.20 301.2367  8.111308\n",
+      "6   0.25 307.6747  3.511192\n",
+      "7   0.30 302.2205  6.135907\n",
+      "8   0.35 308.7533  2.656088\n",
+      "9   0.40 306.1014  3.511192\n",
+      "10  0.45 305.4991  3.511192\n",
+      "11  0.50 293.6007 43.287613\n",
+      "12  0.55 304.3893  3.511192\n",
+      "13  0.60 306.4340  2.656088\n",
+      "14  0.65 308.2538  2.009233\n",
+      "15  0.70 302.6103  3.511192\n",
+      "16  0.75 302.0282  3.511192\n",
+      "17  0.80 307.0551  2.009233\n",
+      "18  0.85 300.7267  3.511192\n",
+      "19  0.90 303.4592  2.656088\n",
+      "20  0.95 305.9950  2.009233\n",
+      "21  1.00 302.7538  2.656088\n"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAA0gAAANICAMAAADKOT/pAAAAM1BMVEUAAABNTU1oaGh8fHyM\njIyampqnp6eysrK9vb3Hx8fQ0NDZ2dnh4eHp6enr6+vw8PD///9oof/BAAAACXBIWXMAABJ0\nAAASdAHeZh94AAAgAElEQVR4nO2di1bjuBJFlX7N3JlpOv//tRcIkMSWbalUVZZK+6zVkKTt\nrZLkTfwKpCshpDnp7AIIiRBEIkQhiESIQhCJEIUgEiEKQSRCFIJIhCgEkQhRiIdIL2DBDoit\n4iISWLAKXEQCC1aBi0hgwSpwEQksWAUuIoEFq8BFJLBgFbiIBBasAheRwIJV4CISWLAKXEQC\nC1aBi0hgwSpwEQksWAUuIoEFq8BFJLBgFbiIBBasAheRwIJV4CISWLAKXEQCC1aBi0hgwSpw\nEQksWAUuIoEFq8BFJLBgFbiIBBasAheRwIJV4CISWLAKXEQCC1aBi0hgwSpwEQksWAUuIoEF\nq8BFJLBgFbiIBBasAncUkVJaVTrWrIAdDhtRpJTWJo01K2CHwwYUKaWMSWPNCtjhsIjUFLBg\nBVxEWgYsWAF3DJE4RgLrj40oEmftwLpjY4q0rnSsWQE7HBaRmgIWrICLSGDBKnDHEWlV6liz\nAnY4LCI1BSxYAReRlgELVsBFpGXAghVwEWkZsGAF3EFESl9fVLG5gAUr4CLSMmDBCriItAxY\nsAIuIi0DFqyAO5JIi2LHmhWww2ERqSlgwQq4iLQMWLACLiItAxasgDuGSGnxXQmbDViwAi4i\nLQMWrIBbINLlNR+PFs8N6skHkcD6Y5VFuty/XJ6fW9STDyKB9cdaiXS5IhLYibAWx0iX+9cz\nRXoqd6xZATsc1lekF4+k1QNCOkidSM8nG3hHAjsHNt6uXco8Gm1WwA6HjSzS48OxZgXscFiz\n09+IBHYmLCI1BSxYAXeIOxsQCewJ2Hj32iES2BOwoUV6eDzWrIAdDotITQELVsAdQaSUfzLW\nrIAdDotITQELVsAdTqT7s7FmBexwWERqCliwAi4iLQMWrICLSMuABSvgItIyYMEKuOOJ9PV0\nrFkBOxw2mkjLEhEJrAsWkZoCFqyAi0jLgAUr4A4o0ucLY80K2OGwiNQUsGAFXERaBixYAReR\nlgELVsAdUaSPV8aaFbDDYYOJlKkQkcA6YBGpKWDBCriItAxYsAIuIi0DFqyAO6RIt9fGmhWw\nw2ERqSlgwQq4iLQMWLACbvciZQtEJLD22AlEen91rFkBOxwWkZoCFqyAi0jLgAUr4CLSMmDB\nCriItAxYsALuoCK9vTzWrIAdDotITQELVsDtXaSt+hAJrDUWkZoCFqyAO6pIr/8x1qyAHQ6L\nSE0BC1bARaRlwIIVcBFpGbBgBVxEWgYsWAF3WJGuqedZSWlZeM/Vgm3ndi7STnk9i5TSyqSO\nqwWrwEWkZRSwKa1N6rdasBpcRFoGkcAKuOOKZFU6IoEVcBFpGY6RwAq4iLQMZ+3ACriItIyO\nSKvqxtqGwNZyBxbpxaZ2JZGWpY+1DYGt5fYt0m51iATWFItITUEksAIuIq2wGpB0XRY/1jYE\ntpaLSCusBgSRAmCnEcmmeEQCK+Ai0hqrEEQKgEWkpqjc2fDwVRGbCVg7LCI1BZHACrhdi7Rf\n3ItN9YgEVsBFpAy2Oenpmxo2E7B2WERqCiKBFXARKYNtDiJFwCJSUxRFeqxvrG1ohV1/LkQF\nqxNEOsihSBblI1IGm/mkogZWKYh0kFFFSqsHo21DC2zus/MKWK0g0kGGF+nh0VjbECLVcnsW\n6aA2RHLDItJhBhfJoH5EymA5RjoKImWxbUmZh2NtQ5y1q+UiUhbblngirT/xq4JVCiLtB5GO\ng0h2WERqiq5IX4/H2oaWJxuuiHSQ0UXS70D7rKTck7G2IUSq5SJSHtuScCKlry+qWLUg0m6O\nShtDpM9nY21DiFTLRaQ8tiXRRMrcy66B1Qsi7aZMJPUeINISi0gFQaQNbEOCiZS5lV0DqxhE\n2k0QkT6ejrUNIVItF5E2sPIsCxpcpNxnQhSwmkGk3RSKpN0FRLoiUj23X5EOKxtFpNsLY21D\niFTLRaQtrDixRMrdN6iAVQ0i7QWRSoJIdlhEaoq+SO+vjLUNfWFz998qYHWDSHspFkm5D4h0\nRaR6LiItm23+KGgkkbL337ZjlYNIezlHpPZfTpBbO422DSFSLReRnhtt/3U5kUTK3uzUjtUO\nIu3kuLDsmaXGINITNnuzUztWO4i0k1Aivb441jZ0w+bv0WjGqgeRdnKOSEbHSIj0iFUPIu3k\nJJHaz9rFESl/ZbkZqx9E2slpIr1YiPSKbaNuBZHssPOJpLpvh0gf2Pz1sGasQRBpJ6OKtLF2\nCJGax3msQfAV6cUoyWzhI1QbbGttxRKdkql4vE4YR1GkEtcE6xTUNdQ7ktVA2/2M37ge1oq1\nSIh3pILYi6R5JQmRrohUz0WkZcMvbbAoIm2cxW/FmgSRthNOpNaTgVtYEyoiVXMRadkuIl03\nq0WkzSDSsl1Eum5X29gJRGqKg0hq/WgVaXPdRj+3sSYxOtJDpKYg0hWR3oNITRH0s6QsRLpa\nbUOb92Eg0lYQadnwxiWU4vU30obdDCLZYacUSasjiHTd+9AHIm0FkZYUREIkAReRlhQ7kSwG\n22IbSjvYti4gUlMmEml7TUS6IlJjXETS6QkiXc8VSfRJf0TazLkiyVn7IhmMtsE2lPawxiLJ\nfvcMIm2lqCpEukYTSfjb0BBpK4hUGv1tKO1iEWkjiLSEWIqkP9zeIrX1AJGa4iOSRlc+92om\nFikdYE1F4hhpN4h0RaQD7Bees3bbmUeknfVeDpcQRXsbSkdYa5EkDSDSVmQiNf+JsPsJKyEJ\nkfaDSE1xOtnQ/OvvEemrPESq5XYpUllRi1uE2v8gCyIhkpiLSMuGbUXSHnDdbeiruB1sSwcQ\nqSmIdEWkI+wXHJE24yKSxjHS/VrknCLda0OkWm4ckRTO2j1c1JehCkRSHnFEKsEKM6lI7Z1p\nFWlvJUTax97h3NmwFUS6DiHSQ2WIVMvtUaTCmgYVSXfIEakEKwwiCTO3SI917WEb6j+8+1vG\nR6R8EKk8iFSAlQaRZEmPWAmrTCTVMdfbhp6qQqRabiiRGnuDSEVYRMoFkZZrTyrSc1FnilTf\nACLlM6pIu6s8Vqs46IhUgJUGkWSZWaRFSbtYefkH1SYhH5GyKS0Jka6IVIIVB5FkcRNJcdRV\ntqH1XYqIVMtFpOXa8tu0RxUpc988ItVyY4nU1J30jJ1GpNwnuRCplotIy3U9RNIbdkQ6xoqD\nSKK0irS/AiIdYe/c2gYQKRtEqsgZx0jy6hGpKYh07Vqk2rN2iJRJfyIVV2QsUjWrRiS1cVd5\nR6rFItI6iLRcF5EOsYi0TjCRGvrzuSYiHWIRaR1EWq7pI5LWwGuctavG2oiUMo8UsA1BJEkQ\nqRhrLVJtA4iUy6giHSzerUjZQsqunFYHkZqCSNdMtTojj0hH2IYgkiQrkSpZ1SK1/zmnHLY2\n+SIQqZbbnUjlBeWx4g45i6Tx55wy2Oogkg4XkZYr+oik8scz1tj6dCNS2njciG0JIgnytd5c\nIm1UgEi1XERarodIBVhh4R2JVDL4iCSIs0jXPkTaKuBkkSr5gkEoGn1EEiQjUhXraNn8Wbvm\n4UekA+xGY0U/xxBJEHeRPlZrnABEOsBuNIZIh1hhj04SqXUG2kTabNtfpLTzrAG71Vp4kSrq\nCSJS2xQg0j52s7nox0gTitS0e9ck0na74UUKf9buLJHua/mL1DILJ4kkrLgnkQraQKT6nCuS\nfBqCilTHl+zalTSBSPXJilTDajxwle7etYi00+QMIh23gUj1aRWpfVLUN83D9CTSkodImfiK\nJOvS+SLJ6m4Qaa+96CKlojYQqT4diCTavUOkXexuc5FFqiknnEiS0uUi7bY1hUitx7UZom0G\nEOlhnTNFqn9TOksk7R1RX5FSWSOIVJ0NkcpZarsJldUj0i52vzVE2sWOLZLDtciCZrxFWtM0\ntoTNIFIRVtCnVpE0L+5V7d4h0h72qLWDRhCpOj2JpHLqsrEJRKrlItJylQ5EqugBIu1hj1pD\npF3s+CKV796dJpJoy+lDpJR51MztSySdczUBRHonat/p/0xvxUYQqflIsZSkk/5FelzjZfN/\nCgH51J9ZUv/s2SO8HaspUoaFSOsg0gpbglT/NPQD+2iB80WyO+OSNh63cSOKVN8pRKrHItIm\n1SrxRSpYCpF2sKeJtN8KItVgliv0IpL+7+e4kw+XCCxS2nnWwEWk5QrdiGR31k4HK9h0EKkp\n7reZKYpUxrIRqXOsnkhZEiKt0r1IT8sjUiF2TJGW2L1mEKmKM5tIJT1CpFauRdxFqu0VIkmw\nxiJV8BFpEUSq5iLSNrYMutMMIjmLpLVpCsCCs+olCyFSJReRVosjUim2ftvJYzc4iLTM0CKV\nsEYSqWxoooqUYQYUqbIWRJJgEam8HUSqQz0vjEilWEQqougFkTLYouiLVDgwPYhUzm87dkAk\nLRQiybCIVETRS3SR9M6D1ZMrsaXjUoat3niy2E2Kk0jb7SiLdHnN8vuloonBRTpmIVJpThap\n9mBMV6TLx5fP79cqiWrqQaR6MiJtYcuBiKSEmkck5U0TkQogz7kshKpKYT2107KLrYEhkhA7\nmEjVDRmL9HyI9KKWpIeqgh0teohSLdySrF2oDm+T4lauvKE6kW7irHbxitP5O9Ji0Z7ekY7R\nVVjtS5wq70g7EN0jut7eka6P34uCSDlsUVRFqhgTxylzE2mbhkgqsCORjlhlTSHSBrYDkbb+\ny/as3XS7doikQdzETi1S3Zk7RMpiS6IpUs34BhRpD+YiUvbOhooWzhGpgoZIYiwiFeG14nlR\noh63XDCqSFXj6yeSYPsuwVbC8v+JSDU4RJJjjUUq5ZdUu49CpHbcsUiiSVgmpEi1k4ZITUGk\nPLYgeiLVDS8ilXLL+DqJLZLiZAvgiJTH1pKy/49INbw5RGrf4o2wiFQeRMpjCxJeJI29ZkR6\nCiJJ4IiUxdaDcksMKVJ9IToirRarvGhoK9Ih/ZSL3WIwIjUFkTawBZlbJLUzoogkxyJSOUWI\nrSafJVIBBpEagYgkx1aTOxYptwwiVRBbRSqt+0yR9MdWiF5hRSfTjrESDCK1ERFJjK1HnyRS\nEQWR2oiIJMbWoxGpKT2LtF4oi91mdS9SSoI59roXtiORSjeFpjba0n5PoQiLSO+AJDGpF5HK\n8EannRCpAhldpJREJiFSAVfSSFMQaQt7nNgiya6THmIlDERqY7aKVFw3ImWwLiIVV1h03qm5\nlYYg0hb2OLGPkRCpKgFE2mR1L1LXZ+0QqSqItIk9zkEDBVjJFFdUW4M/Q6Ty+hBJziy+CodI\nGvi+RVotOp5INrsfiFRCkGIl+AVWtstwiK0HbCw6nEhWB8SiH3jRRBLNcByRasobXSSzU7SI\ndAyQYkV8RGpKYJHKi0akNbY3kZYLI9InWLLEBjbPQqSqBvxFquv94CKNcIyESBoNIFJTjm+K\nM7poiEjHAClW1MAztmhFRLpH557CWmwJObcAIhVhRQ0IRCpZarva2s4/Lz+YSIbYo94hkhgr\nagCRmqJ0K1QdtoiNSGKsqAFEaorWhecabBm8QqQ8C5G6Fqm+709rjCRSQ/sdiCQ/YVWc/kUS\n/zRBpMqonVQpxpbiBxDpoI2BRSpcDZG+orcLW4gt5iOSGCtqwVkkQdfHFKmt8XaRsv8dTCTZ\nGE8r0tM6o4jU2HZJN/ebQCQxVtaERKSC5SYXqbVpRCrBTiySqOvjidTcsrNIuaURqa4JRGrK\neXc2IJKHSOVtPGKLV/IV6XGtIURqb/h8kWr6gEhXZ5GEW9hgIim0i0glWESqzFgiaTRb1M3d\nhhBJjJW1gUhNWdej0mqzSPn/Q6QSrKwNkUjHS+oeO9xX7F4knUa9RVovj0iVbSBSU5b1KLWJ\nSCVYD5GKG3nAVtSFSB9Z1KPVJCKVYGcVSb6VjSKSWouni1TVE/nFtN1mjrDC0Z5ZpPuqfYvk\ni0UkURBpi3u4kmFEN4ZUYjez0x4iibHCVvxEatnMhhBJsb1WkTb+B5EKsMJWZCIdLrs+LSz5\n9W7r5joWSbM5d5GWayBSbSt3bFVdtSLJfuHour1+RVJtDZEKsD4ilTbjI5LwV2Cv2+tWJN3G\nEKkAi0iC9C6ScluIVIBFJEE6F0m7qbNFqusPIl29RGo+RvpssE+R1Fsq7OZmu4gkxwqbcRKp\n8axd3yLpN+Qv0vMqiFTdjPBouV6kKvxmg12KdBp2q4dbryNSAVbYjPS008Hi+ndFpyz3eA3b\nvNi0g0gFWCeRCttBpJa87bBaNINIx1jpuCNSjnu8hmWaT6FsZRaRdhtCpOskIjWf1N9MaTc3\n2kYkOVbakI9IGhtbynCPV7BMWJEqu4RID9jashApmEiPKyFSfUOI1JCzj5EQSZD6aotaEt8s\ntr/Cc7UqG1uHIjVfZt5Km0ibNSHSMVba0jgivVM6E+nkC7KIJAgiIdIqiFSfgUVS2qIRaZ1s\nHxFpL7Yi1VeFSG8JJNLDaohU39JAIr1xEOk5JiLVDhwiXV1EUtugEWkVRKqOoNqSphCpKT2K\ntN3vSCKJZ7c3kfZXQSQfLCJVZ1iRFLfnhEiLjC7SXlsjiiSpCpGu54uU66RUpK8VEUnQFiI1\nBZGOsUVtVmMRqSGItIqBSNXjhkhXB5FUN+eESIsgUm0k1RY0hkhNQaRjbEmb9dg4IhWeutQV\nqeZjC5OKJN40EamlsZfC5SrpLyUL1bdY9UG6KURa9xKR9oNItR/tRqRabDoCyLDHTQqwiCQP\nImWCSJUZUyT9PTtEeg4iVUYk0vFWN5JIHCNloi5S/bCdIZJ8ciXXkQq2u6FE4qzdOohUmfpq\ni/aE3rDCogpEUt+WuY60zLKXZRcldliItGrLWKSCQUAke2zafVqHTQcAIfaoSQEWkdrSJNLf\nP15H4/t/iuUgUhH2qEkB1v8YCZE+8ufb+2ik9O9J9RhhEaku4rN2+02aiqS/c9Wwhf1Mv14H\n5Pq/9P2keoywiFQXebW7b0rziPT+QyUdDMdzY0Mk7T6tZzUBZE36rdaY/VbFNR2ueEZvFUUq\ncU2RJcQqvyMJRmeWd6TdZl8aajp6RzI4bda+a/cr/TypHiMsItWlbco2fwy3iHQ0CH2J9Ody\nO/ly+X1SPVbYtPmkHiv6k7gzibTZ8jwiXa9/fUvp268/iuUgUhl2t0UR9jyRNpo2FMnigigX\nZNeZUaSGuW2fsuzuHSI1BZGKsLstSrCnipRt/qWlprFE+vtyvf6bLn+dVY8VFpGqojJl6/bt\nRDJ5Q2gQ6e/Xd+TfbyccNE1CpCLsbosS7NkirXfv5hHpW/r39d/f/6XLSfWYYdPGYwFW9Edx\nZxRpVcI8Ir1uIv+kb/EuyGqKJPsz7Y1XZiTYDkRabEhNIu0OQm8iXdLvn+m/t6Okk+oxw6bs\nQwG28rP8pdiDRiXYHkR6rsJMJJtzZg0i/fV2MfZtY/l1Uj1mWESqieaUPZTx0rTBjyTS9Ve6\n/PP6xqTpESKVYA8alWA7Eelh924ikSwSSySOkerzWYmVSEZbMSJloifSCWftRhfpsxREakoX\nIj30tFUkUeYW6WP3bh6R/vxMwmMApXrssIhUEYNBSMK38mdE1eutaRDpR4ov0kHX+qh2EYlI\nLVNoMQjt29VAIqX0P9VS3tPHpolIFbETyeJCUocifbOoqY9NE5EqMpRIVX9ZryYNIv1W/kzf\ne/rYNBGpIoj0lpazdv/jGElSy3EQSXgB7hGw8XKHIgU+2fDVVUQ6js0g2Jy1S1ZTxsmGfEYW\nabPooUSyGYQuRfoR92QDIlWkz0HId6lLka4/fmr+Iq5bOpmV9PRNDVsYRFLAjiNSin+MhEgF\n6XMQsl1KZtUiUj6IVJ4+B2EgkUzSy6ykh6+K2LIgkgJ2HJG+a/7O78/0MiuIVJw+ByHXpaSA\n3UqDSJfAZ+0mE6lpJvschIFE+u/7r7Bn7RCpPH0OQq5TnYoU+WTDra+HHeul2ucg0ntWnUoq\n2I0gUj6IVJw+B2EgkUzSy6wgUnH6HARE6gSbrohUlj4HYd2ppIPdCCJtBJFK0+cgIFIn2IFF\n2qobkTSwG0GkjSBSaTodBETqA4tIpel0EJa9SlrYfBBpI6mkv91U+xxEeg8i9YBFpNJ0OgiI\n1Am25I9W9lPtUxDpPSn3BJG8sROJ1DaxnQ4CInWCRaTCdDoIiNQJFpEK0+kgPHfr6zEieWMR\nqTCdDsL1qV+IdBoWkQrT6SBcEakPbMnHQ/qp9imIdEvKPEIkZ2zRB626qfY5iHQLIp2PLfvI\nYi/VLoJItyDS+dihRdqYKUTSwWaDSPkgUnF6HYSHfj10EJGcsSMfIyHSLYjUA3bgs3aI9JG0\n+K6EzQWRImLrRGqc114H4frVs8cOIhLY8iDSLYgEtimIdAsigW0KIt2SHr4qYnNBpIhYRLoF\nkcA2BZFuQSSwTUGkj6TrsnuIBLY8iPQRRALbEkT6CCKBbQkifSSteodIYCuSnSpE0sJmgkgh\nsYh0CyKBbQoi3YJIYJtSI1LrtHY7CNfcb7BBJLAVQaRb1p+FQSSwFUGk92Q+nYlIYCuCSG/J\n/b4ARAJbEUR6CyKBbQwivQWRwDYGkd7DMRLYtiDSLZy1A9sURHLGIlJMLCI5YxEpJhaRnLGI\nFBSbmytEssMiUlAsIvliESkotlyk5lntdxAcsYgUFItIvlhECopFJF8sIgXFIpIvFpGCYhHJ\nF4tIQbGI5ItFpKBYRPLFIlJQLCL5YhEpKBaRfLGIFBSLSL5YRAqKRSRfLCIFxSKSLxaRomIz\nk4VIdlhEiootFal9UjseBD8sIkXFIpIrFpGiYhHJFYtIUbGI5IpFpKhYRHLFaot0eU3uu0k9\nYHeCSK5YZZEuH1+W323qAbsTRHLFIlJULCK5Yi2OkRCpBywiuWJ9RXohbknKy5HW1Il0O7nA\nO9LpWN6RXLHs2kXFIpIrFpGiYgtFUrg22PEg+GE5axcWu54tRLLDIlJYLCJ5YrmzISwWkTyx\n3GsXFotInlhECotFJE8sIoXFIpInFpHCYhHJE4tIYbGI5IlFpLBYRPLEIlJYLCJ5YhEpLBaR\nPLGIFBaLSJ5YRAqLLRJJY0p7HgQ3LCKFxSKSJxaRwmIRyROLSHGxq+lCJDssIsXFIpIjFpHi\nYhHJEYtIcbGI5IhFpLhYRHLEIlJcLCI5YhEpLhaRHLGIFBeLSI5YRIqLRSRHLCLFxSKSIxaR\n4mILRFKZ0a4HwQuLSHGxiOSIRaS4WERyxCJSXCwiOWIRKTB2OV+IZIdFpMBYRPLDIlJgLCL5\nYREpMBaR/LCIFBiLSH5YRAqMRSQ/LCIFxiKSHxaRAmMRyQ+LSIGxhyLpTGjfg+CERaTAWETy\nwyJSYCwi+WERKTAWkfywiBQYi0h+WEQKjEUkPywiRcYuJgyR7LCIFBmLSG5YRIqMRSQ3LCJF\nxiKSGxaRImMRyQ2LSJGxiOSGRaTIWERywyJSZOyBSErz2fkg+GARKTIWkdywiBQZi0huWESK\njEUkNywiRcYikhsWkSJjEckNi0iRsYjkhkWk0NjnGUMkOywihcYikhcWkUJjEckLi0ihsYjk\nhUWk0FhE8sIiUmgsInlhESk0dlckrensfRBcsIgUGotIXlhECo1FJC8sIoXGIpIXFpFCYxHJ\nC4tIobGI5IVFpNBYRPLCIlJoLCJ5YREpNvZpyhDJDotIsbGI5IRFpNhYRHLCIlJsLCI5YREp\nNhaRnLCIFBu7I5LabHY/CB5YRIqNRSQnLCLFxiKSExaRYmMRyQmLSLGxiOSERaTYWERywiJS\nbCwiOWERKTYWkZywiBQbi0hOWEQKjn2cM0SywyJScCwi+WARKTgWkXywiBQcuymS3mT2PwgO\nWEQKjkUkHywiBccikg8WkYJjEckHi0jBsYjkg0Wk4FhE8sEiUnAsIvlgESk4FpF8sIgUHItI\nPlhECo5FJB8sIgXHIpIP1lekF+KeVPk6sYqiSCWugdXFPkwa70h2WHbtomM3RFKcywEGwR6L\nSNGxiOSCRaToWERywSJSdCwiuWARKToWkVywiBQdi0guWESKjkUkFywiRccikgsWkaJjEckF\ni0jRsYjkgkWk6FhEcsEiUnQsIrlgESk89j5riGSHRaTw2KxImlM5wiCYYxEpPBaRPLCIFB6L\nSB5YRAqPRSQPLCKFxyKSBxaRwmMRyQOLSOGxiOSBRaTwWETywCJSeCwieWARKTwWkTywiBQe\ni0geWEQKj0UkDywihccikgcWkeJjv6btZf2SRoYYBGssIsXHIpIDFpHiYxHJAYtI8bGI5IBF\npPhYRHLAIlJ8LCI5YBEpPhaRHLCIFB+LSA5YRIqPRSQHLCLFxyKSAxaR4mMRyQGLSPGxiOSA\nRaT42LVIuhM5xCBYYxEpPhaRHLCINAH2c94QyQ6LSBNgEckei0gTYBHJHotIE2ARyR6LSBNg\nEckei0gTYBHJHotIE2ARyR6LSBNgEckei0gTYBHJHotIE2ARyR6LSBNgEckei0gTYJciKc/j\nGINgjEWkCbCIZI9FpAmwiGSPRaQZsOkZi0gncxFpUCwimWMRaQYsIpljEWkGLCKZYxFpBiwi\nmWMRaQYsIpljEWkGLCKZYxFpBiwimWMRaQYsIpljEWkGLCKZYxFpBuyzSNrTOMgg2GIRaQYs\nIpljEWkGLCKZYxFpBiwimWMRaQpsesQi0tlcRBoVi0jWWESaAotI1lhEmgKLSNZYRJoCi0jW\nWESaAotI1lhEmgKLSNZYRJoCi0jWWESaAotI1lhEmgL7KJL6LI4yCKZYRJoCi0jWWESaAotI\n1lhEmgKLSNZYRJoCi0jWWESaA5vuWEQ6nYtIw2IRyRiLSHNgEckYi0hzYBHJGItIc2ARyRiL\nSHNgEckYi0hzYBHJGItIc2DvIulP4jCDYIlFpDmwiGSMRaQ5sIhkjEWkObCIZIxFpDmwiGSM\nRaQ5sIhkjEWkObCIZIxFpEmw6YpIllhEmgSLSLZYbZEur1l+v1jVA7Y8iGSLVRbp8vHl8/u1\nSr3YSOwAAAVcSURBVKLaesCWB5FssYg0CRaRbLEWx0iXhVBm9YAtDyLZYq1Fej5EeiFnJS2+\nE/fUivS5R3d53MUrzlg/h8bBfr4jGZx5HWcQDLEG70ifZ+u+BEKkDrCIZIvVF+myeoRIHWAR\nyRarLtLl/pVdu46wiGSLVb8g+/DtIjkDPtbwjYNFJFus9nWkz9N0yzscTOoBWx5EssVyr90k\nWESyxSLSLNiESJZYRJoFi0imWESaBYtIplhEmgWLSKZYRJoFi0imWESaBXsTyWIKBxoEOywi\nzYJFJFMsIs2CRSRTLCLNgkUkUywizYJFJFMsIs2CRSRTLCLNgkUkUywizYJFJFMsIs2CRSRT\nLCJNg02IZIhFpGmwiGSJRaRpsIhkiUWkabCIZIlFpGmwbyKZzOBIg4BIYFuDSJZYRJoGi0iW\nWESaBotIllhEmgaLSJZYRJoGi0iWWESaBotIllhEmgaLSJZYRJoGi0iWWESaBotIllhEmgeb\nEMkOi0jzYBHJEItI82DTi80EDjUIiAS2NYhkiEWkebCIZIhFpHmwiGSIRaR5sIhkiEWkebCI\nZIhFpHmwiGSIRaR5sIhkiEWkebCIZIhFpHmwiGSIRaR5sIhkiEWkebCIZIhFpImwCZEQCWx7\njOZvrEFAJLCtQSQ7LCJNhEUkOywizYNNHCPZYRFpGmxKRiaNNAiIBLYxKVmZNNAg2GERaRYs\nIpliEWkWLCKZYhFpGizHSJZYRJoHy1k7QywigQXrzUUksGAVuIgEFqwCF5HAglXgIhJYsApc\nRAILVoGLSGDBKnARCSxYBS4igQWrwEUksGAVuIgEFqwCF5HAglXgIhJYsApcRAILVoGLSGDB\nKnARCSxYBS4igQWrwEUksGAVuIgEFqwCF5HAglXgIhJYsApcRAILVoGLSGDBKnARCSxYBS4i\ngQWrwEUksGAVuIgEFqwCF5HAglXgIhJYsApcRAILVoGLSGDBKnARCSxYBa6HSISEDyIRohBE\nIkQhiESIQhCJEIUgEiEKQSRCFIJIhCgEkQhRCCIRohArkS6vWT5+fK2vbFXbZ7nLai/XQcb2\n8lhtp+W+Fnd/VLHhGol0eajo8/Hja30lV22flb7laRyXVXeXVWVdj+31zZqvRx9figYXka6I\nZJllZf1Wesvlikji5H5qdlnoe1Zjex1pbLv+GfUeRBInK1K3u/FPY/t50PHwWl9ZVNb54edb\nEEmczZ+a3Vc73NheMq91FkQSJ7sfv3itn2zuiI5Qbe5RZ0Ekccaa7JFFyv206i2IJE5usseo\nlrHVDyKJ81TZQ9VdFrsa23GO6B5F6rLY93Ql0v2i8OPjbs/VPFT7dPX95LI2MuzY3v3vttrr\nk+zn39lAyFxBJEIUgkiEKASRCFEIIhGiEEQiRCGIRIhCEIkQhSASIQpBJEIUgkgDJqXtZ+Sc\nMAkDBpH6C5MwYBCpvzAJ4+TfHyldfl1v6rz++5G+/749+3V7/b4E8Q4iDZN/0nt+fYr08/XJ\n5c/box8fr9+XIN5BpGHyLf3vev3v493o9d/3P9fvN61eH/2VLo9LEO8w6APl9z9/fb+L9N/r\nC+nb26OPHbyHJYh3GPRx8v225/Z1jHRdProvQbzDoA+Tn+nb3//83hPpvgTxDoM+TN4F+XMX\n6ffbrt33lVJ/EOmMMOjDJKV/r38ejpG+vz3761mkzyWIdxj0YfIrPR8jvR0Qvf1ym7tI9yWI\ndxj0cfLzVZ5/H3btvqef9/N171+/liDeYdAHDbr0FaZj0CBSX2E6Bg0i9RWmY9AgUl9hOghR\nCCIRohBEIkQhiESIQhCJEIUgEiEKQSRCFIJIhCjk//namRB2+lKhAAAAAElFTkSuQmCC",
+      "text/plain": [
+       "plot without title"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "result <- data.frame()\n",
+    "for (alpha in seq(0, 1, 0.05)) {\n",
+    "    elastic.fit <- cv.glmnet(x[train.id,], y[train.id], alpha = alpha, lambda = grid)\n",
+    "    predict <- predict(elastic.fit, s = elastic.fit$lambda.min, newx = x[-train.id,])\n",
+    "    \n",
+    "    result <- result %>% bind_rows(data.frame(alpha = alpha, \n",
+    "                                              rmse = sqrt(mean((predict - y[-train.id])^2)),\n",
+    "                                              lambda = elastic.fit$lambda.min))\n",
+    "}\n",
+    "\n",
+    "ggplot(result, aes(alpha, rmse)) + geom_point() + geom_line() + theme_minimal()\n",
+    "print(result)"
+   ]
   }
  ],
  "metadata": {
