--- a/Logistic Regression.ipynb
+++ b/Logistic Regression.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Logistic Regression blarblar~"
+    "Logistic Regression이란, 독립변수의 선형결합을 이용하여 범주형 독립 변수의 발생 확률을 예측하는 분류 기법이다. 일반적인 회귀 분석의 목표와 동일하게 종속 변수와 독립 변수 간의 관계를 구체적인 함수로 나타내어 예측 모델에 사용한다."
    ]
   },
   {
