--- a/Logistic Regression.ipynb
+++ b/Logistic Regression.ipynb
@@ -521,10 +521,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Threshold 별 ROC Curve 그리기"
+   ]
   }
  ],
  "metadata": {
